# guile-scsh

./: AUTHORS  ChangeLog  INCOMPAT  Makefile.am  NEWS  README  THANKS  USAGE  alt-syntax.scm  ascii.scm  autogen.sh  awk.scm  bitwise.scm  char-p.scm  configure.in  cset-obsolete.scm  define-foreign-syntax.scm  defrec.scm  ekko.scm  errno.scm  fdports.scm  features.scm  fileinfo.scm  filesys.scm  fluid.scm  fname.scm  fr.scm  glob.scm  here.scm  init.scm  jar-defrecord.scm  let-opt.scm  loophole.scm  make-module-list  module-system.scm  netconst.scm  network.scm  newports.scm  population.scm  primitives.scm  (+15 more)
lib/CVS/: Repository
rx/: Makefile.am  cond-package.scm  let-match.scm  oldfuns.scm  parse.scm  posixstr.scm  re-fold.scm  re-high.scm  re-low.scm  re-subst.scm  re-syntax.scm  re.scm  rx-lib.scm  simp.scm  spencer.scm
rx/CVS/: Entries  Repository  Root
