## Process this file with automake to produce Makefile.in.

pkgdatadir = ${datadir}/guile/site/scsh

pkgdata_DATA = alt-syntax.scm ascii.scm awk.scm bitwise.scm \
	cset-obsolete.scm char-p.scm define-foreign-syntax.scm \
	defrec.scm ekko.scm errno.scm fdports.scm features.scm \
	fileinfo.scm filesys.scm \
	fluid.scm fname.scm fr.scm glob.scm here.scm \
	init.scm jar-defrecord.scm let-opt.scm \
	loophole.scm module-system.scm \
	netconst.scm network.scm newports.scm population.scm \
	primitives.scm procobj.scm \
	rdelim.scm reading.scm rw.scm \
	scsh.scm scsh-condition.scm scsh-version.scm \
	sighandlers.scm signals.scm stringcoll.scm \
	syntax.scm syntax-helpers.scm syscalls.scm \
	time.scm utilities.scm weak.scm

EXTRA_DIST = $(pkgdata_DATA) INCOMPAT USAGE make-module-list autogen.sh

SUBDIRS = rx
